# FiberCompression

./: CMakeLists.txt  README.md
libs/tclap/: Arg.h  CmdLine.h  MultiArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h
rsc/: icon.icns  images.aps  images.qrc  images.rc  resource.h
src/: Application.cpp  Application.h  ArithmeticCoder.h  DCT.cpp  DCT.h  Encoding.h  FWT.cpp  FWT.h  Fibers.cpp  Fibers.h  Huffman.h  HuffmanUtilsIO.h  MainWindow.cpp  MainWindow.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  main.cpp  main_gui.cpp
